manifests/prod/slskd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd-deployment
  namespace: app-slskd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      # securityContext:
      #   runAsUser: 2000
      #   runAsGroup: 2000
      #   fsGroup: 2000
      containers:
      - name: slskd
        image: slskd/slskd:0.20.0
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
        # env:
        # - name: SLSKD_REMOTE_CONFIGURATION
        #   value: "false"
        ports:
        - name: webui
          containerPort: 5030
        - name: external
          containerPort: 50300
        volumeMounts:
        - name: slskd-app
          mountPath: /app
        - name: slskd-media
          mountPath: /media/slskd
        - name: slskd-config
          mountPath: /app/slskd.yml
          subPath: slskd.yml
      volumes:
      - name: slskd-app
        hostPath:
          path: /opt/configs/slskd  # Adjust the path accordingly
          type: DirectoryOrCreate
      - name: slskd-media
        hostPath:
          path: /opt/other/slskd-media  # Adjust the path accordingly
          type: DirectoryOrCreate
      - name: slskd-config
        configMap:
          name: slskd-configmap
          items:
            - key: slskd.yml
              path: slskd.yml

  # restartPolicy: Always
