manifests/prod/slskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd-service
  namespace: app-slskd
spec:
  selector:
    app: slskd
  ports:
  - protocol: TCP
    port: 80
    targetPort: webui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: slskd-service-nodeport
  namespace: app-slskd
spec:
  selector:
    app: slskd
  ports:
  - protocol: TCP
    port: 50300
    targetPort: external
    # nodePort: 50300
  type: NodePort  # Use NodePort to expose on nodes
